--- a/coupled-layout-design.tex
+++ b/coupled-layout-design.tex
@@ -1,4 +1,6 @@
-\documentclass[wes, manuscript]{copernicus}
+\documentclass[WESD, manuscript]{copernicus}
+%\documentclass[wes, manuscript]{copernicus}
+%\documentclass[wes, WESD]{copernicus}
 
 \begin{document}
 
